<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">

        <!--Name Input-->
        <EditText
            android:id="@+id/Name"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint"
            android:inputType="text"
           />

        <!--Topping header-->
        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
           style="@style/HeaderTextStyle" />

        <!--Topping Checkbox-->
        <CheckBox
            android:id="@+id/WhippingCreamCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/WhippingCream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ChocolateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Chocolate"
            android:textSize="16sp" />


        <!--Quantity Name-->
        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!-- + Quantity piker-->
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="increment"
                android:text="@string/increase" />


            <!--Quantity Number-->
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!-- - Quantity Piker -->
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"
                android:text="@string/decrease" />
        </LinearLayout>




        <!--Order button-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>
